--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.8",
+    "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
+    "lucide-react": "^0.515.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "@tailwindcss/vite": "^4.0.8",
-    "tailwindcss": "^4.0.8",
-    "lucide-react": "^0.515.0",
-    "dotenv": "^16.4.7",
-    "axios": "^1.8.4"
+    "react-router": "^7.8.2",
+    "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
